--- a/character_tie_73bb748374a7.html
+++ b/character_tie_73bb748374a7.html
@@ -83,11 +83,11 @@
 							「なら、よかったです」<br>
 							「あの本を手に、感情がぐちゃぐちゃで思いつめていた様子でしたので、すみません。もう本に憑かれているのかと思って、つい刃を向けてしまいました」
 						</span><br>
-						その言葉を聞いて、彼女はう、と押し黙る。その様子を見て、滑らかな正座で少女と目線を合わせた女性が小さく笑って続ける。<br>
+						その言葉を聞いて、彼女はう、と押し黙る。その様子を見て、滑らかに正座して少女と目線を合わせた女性が小さく笑って続ける。<br>
 						<span class="spanCharacterDialogTie">
 							「すみません。本当を言うと、もう少し早く止めようかと迷っていたんです。アレは放置すると面倒な類でしたし、貴方が『見える』ことはわかっていましたから」<br>
-							「……私は他人の心が少しわかってしまうのです。だから、その……貴方が、自分を害する何かを求めてここに来たことも、わかってしまいました」<br>
-							「……それを止めるべきか、それとも怪異として斬るべきか。悩んでしまって……結果、怖い思いをさせるだけになってしまいました」<br>
+							「……私は他人の心が少しわかってしまうのです。だから、その……貴方が、自分自身を害する何かを求めてここに来たことも、わかってしまいました」<br>
+							「……それを止めるべきか、それとも望み通り怪異として斬るべきか。悩んでしまって……結果、ただ怖い思いをさせるだけになってしまいました」<br>
 							「せめてもの贖罪です。誰にも話しませんから、何故あのようなことをしたのか、何故ここに来たのか……何を悩んでいるのか。こっそりと、教えてくれませんか？貴方にはきっと、誰にも聞かれない吐き出し先が必要だと思うのです」
 						</span><br>
 						それを聞き、暫くの沈黙がその場を支配する。五分を超える間、女性が少女を撫でる音だけが部屋に響いていた。<br>
@@ -104,7 +104,7 @@
 							「辛いですよね、お母様を亡くすことは……」<br>
 							「そう思うまでに、お母様が大好きだったのですね。でも、きっと話してしまえば、心配をかけてしまうから」<br>
 							「貴女はきっととても優しいから。抱え込んで、自分一人で思い悩んでしまって……」<br>
-							「……今は、ここには私しかいません。さっき会ったばかりで、赤の他人で、いくら心配をかけても問題のない、私しか」
+							「……今は、ここには私しかいません。さっき会ったばかりで、赤の他人で、いくら心配をかけても問題のない、私しか」<br>
 							「だから、今は……好きなだけ、泣いちゃっていいですよ」
 						</span><br>
 						ふわりと香る、甘い、花のような香。それのせいだろうか。少し心の枷が取れた気がして、純粋な感情の濁流が少女の頭を駆け巡る。少女にもう口に出せる言葉はなかった。ただただ、大きな声と大粒の涙を流し、女性に抱き寄せられるままになる。亡くなったはずの母の手を、自分の頭に重ねながら。<br>
