pushしたらいろいろ言われたのと、commit忘れがあったので追加

--- a/distribute.html
+++ b/distribute.html
@@ -38,6 +38,7 @@
 		<div class="divMain">
 			<br>
 			ダウンロード前に<a href="rule.html">規約</a>をよーくご確認ください！<br>
+			デモ音声はこちら→<a href="./distribute_demo.html">■</a><br>
 			<div class="divDistributeContainerMYCOE" id="MCI_YatoiroTIE_Mio">
 				<div class="divDistributeContainerItem">
 					<h1><b>MYCOEIROINK 谷菟彩稚秉 澪</b><br></h1>
