--- a/distribute_demo.html
+++ b/distribute_demo.html
@@ -85,13 +85,13 @@
 			</div>
 			<div class="divDistributeContainerUTAU" id="UTU_YatoiroTIE_Renzoku">
 				<div class="divDistributeContainerItem">
-					<h1><b>UTAU 谷菟彩稚秉 連続音</b></h1><br>
+					<h1><b>UTAU 谷菟彩稚秉 連続音</b><br></h1>
 					UTAU 谷菟彩稚秉 連続音｜デモ音声1<br>
 					<script type="application/javascript" src="https://embed.nicovideo.jp/watch/sm45382656/script?w=320&h=180"></script><noscript><a href="https://www.nicovideo.jp/watch/sm45382656">「」 - 谷菟彩稚秉 cover</a></noscript>
 					<iframe width="320" height="180" src="https://www.youtube.com/embed/wwnskSCcsk8?si=RvRAOh6gajbOzwtx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+					<br>
 					<audio controls src="res/utau_yatoirotie_renzokuon_001__x0o0x__tamatamo.wav" type="audio/wav">UTAU 谷菟彩稚秉 連続音｜デモ音声1</audio><br>
 					「」 - 谷菟彩稚秉 cover ｜ 作曲：x0o0x_ 様 ｜ 調声：丹間 (@tamatamo) 様<br>
-					<br>
 					<br>
 					UTAU 谷菟彩稚秉 連続音｜デモ音声2<br>
 					<audio controls src="res/utau_yatoirotie_renzokuon_002_iseiniikoune_iyowa_mitsukieira624.wav" type="audio/wav">UTAU 谷菟彩稚秉 連続音｜デモ音声2</audio><br>
