--- a/character_tie_73bb748374a7.html
+++ b/character_tie_73bb748374a7.html
@@ -14,8 +14,8 @@
 						<br>
 						誰もいない廃屋の中。一人の少女が部屋を訪れていた。<br>
 						少女は、何か目的があるのだろうか、部屋にある物を少し持ち上げて、戻して……と動かしながら、小さな手で辺りを探っていた。<br>
-						そのうち物を軽くひっくり返し始め、それでもなかなか見つからなかったのだろうか。周囲を見渡した少女の目が、机の上に釘付けになる。<br>
-						いつからあったのだろう、小さな本が置かれていた。少女は一旦無視しようとして頭を振るが、余程気になったのだろう。散らかした荷物もそこそこに、彼女は本を手に取り、軽くページを捲り……ある1ページでその手を止めた。<br>
+						そのうち物を軽くひっくり返し始め、周囲を見渡した少女の目が、机の上に釘付けになる。<br>
+						そこには、小さな本が置かれていた。奇妙なことに、顔を何度か背けてみるが、それでも視線はすぐに本に吸い込まれてしまう。少女は一旦無視しようとして頭を振るが、余程気になったのだろうか。散らかした荷物もそこそこに、彼女は本を手に取り、軽くページを捲り……ある1ページでその手を止めた。<br>
 						<br>
 						<br>
 						<br>
@@ -43,8 +43,9 @@
 						<span class="spanCharacterDialogTie">
 							「ここにお客人とは珍しいですね。それも、そのページを開くようなヒトとは。運命とは奇異なものですね」
 						</span><br>
-						肩を飛び上がらせて、少女が驚いた。悲鳴とも呼吸ともとれない、ヒッ、という小音が静かな屋内に木霊した。<br>
-						少女が恐る恐る見た先、さっきまで誰もいなかったはずの自分の後ろ。そこには、自分の首に水色の刃物を添えた女性が立っていた。<br>
+						肩を飛び上がらせて、少女が驚いた。悲鳴とも呼吸ともとれない、ヒッ、という小音が静かな屋内に木霊する。<br>
+						少女が恐る恐る見た先、さっきまで誰もいなかったはずの自分の後ろ。そこに女性が立っていた。女性は青い袴の巫女装束を身に着け、その白い襟からは艶のある真っ黒な体が覗く。しかし、その右手は袖の中に隠れ、袖口からは半ば透けた水色の刀が、自分の首のすぐ横まで伸びていた。無表情な顔は人形のように真っ白で、そこから伸びる浅い水色の髪が僅かな月光を反射する。そして、神妙な面持ちで、星空のような瞳が少女をまっすぐ捕えていた。<br>
+						先程の精神の乱れもあるのだろうか。細く揺れる声が、少女の喉を震わせた。<br>
 						「ひっ……ごめんなさい、ごめんなさい、やめて、違うの、謝るから、待って、」<br>
 						そう繰り返す少女に、優しくも低い女声が語り掛けた。<br>
 						<span class="spanCharacterDialogTie">
@@ -52,18 +53,17 @@
 							「ところで、その本の今開かれているページ……非常に危険なものです。今すぐに手を離してくれませんか？」
 						</span><br>
 						「へ……」<br>
-						そう言われて、少女は初めて、自分がものすごい力で本を持っていることに気付いた。驚いて少女が手を離す。<br>
+						そう言われて、少女は初めて、自分が指が白くなるほどの力で本を持っていることに気付いた。驚いて少女が手を離す。<br>
 						しかし、勢いが良すぎたのだろう。本は仰向けになり、眩いほどに光る文字を月光の元に晒しだした。<br>
 						<span class="spanCharacterDialogTie">
 							「あー……」
 						</span><br>
 						そう言う彼女を振り向く間もなく、少女は首を動かせなくなる。金縛りに遭ったように動かず、ガタガタと震える目線の先で、文字が物理的に踊り出し、塊となって少女の顔へと……<br>
 						<br>
-						ｻﾞﾝｯ！<br>
-						水色の剣閃が少女の前を切り裂く。文字の塊は身を削がれ、壁に叩き付けられ、じたばたともがいている。<br>
-						そして少女も、ゴム紐を切られたかのように激しく後ろに吹き飛ばされ、壁にぶつかる――<br>
-						――と思われた矢先、すんでのところで澄んだクッションが少女を受け止める。一見すれば存在を疑うほどの、澄み切った透明な水の壁。それが、気を失った少女を受け止めていた。<br>
-						少女が素早く水に包まれていくのを一瞥することなく、女性は水色の刃を再び構える。漸く動き出し、激怒したように明滅する文字の塊は、しかし壁から離れられずに暴れ続ける。文字と文字との僅かな隙間から、少女を覆ったものと酷似した清水の、しかし非常に鋭い銛が、蠢く文字を壁に縫い付けていた。<br>
+						――！<br>
+						音もなく、水色の剣閃が少女の前を切り裂く。文字の塊は身を削がれ、壁に叩き付けられ、じたばたともがいている。<br>
+						そして少女も、ゴム紐を切られたかのように激しく後ろに吹き飛ばされ、壁にぶつかる――と思われた矢先、すんでのところで澄んだクッションが少女を受け止める。一見すれば存在を疑うほどの、澄み切った透明な水の壁。それが、気を失った少女を受け止めていた。<br>
+						少女が素早く水に包まれていくのを一瞥することなく、女性は水色の刃を再び構える。漸く動き出し、激怒したように明滅する文字の塊は、しかし壁から離れられずに暴れ続ける。文字と文字との隙間から、少女を覆ったものと酷似した清水の、しかし非常に鋭い銛が、蠢く文字を壁に縫い付けるのが僅かに覗いていた。<br>
 						女性の刃が水を纏う。少女の壁となり、怪異の錨となった水。それを纏った刃はぐにゃりとその身を曲げ、次の瞬間。彼女の腕の一閃と共に、文字の塊を壁ごと斬り裂いた。激しく明滅し、空気を震わせ無音の咆哮を放つ怪異は、しかしその体を構成する文字を血潮のように吹き出し、そして――最後の一文字が力なく落ち、地面に着く前に霧のように消える。間もなく壁の刀創が閉じ、部屋は静寂に包まれた。<br>
 						<br>
 						<br>
@@ -85,9 +85,9 @@
 						</span><br>
 						その言葉を聞いて、彼女はう、と押し黙る。その様子を見て、滑らかに正座して少女と目線を合わせた女性が小さく笑って続ける。<br>
 						<span class="spanCharacterDialogTie">
-							「すみません。本当を言うと、もう少し早く止めようかと迷っていたんです。アレは放置すると面倒な類でしたし、貴方が『見える』ことはわかっていましたから」<br>
+							「本当を言うと、もう少し早く止めようかと迷っていたんです。アレは放置すると面倒な類でしたし、貴方が『見える』ことはわかっていましたから」<br>
 							「……私は他人の心が少しわかってしまうのです。だから、その……貴方が、自分自身を害する何かを求めてここに来たことも、わかってしまいました」<br>
-							「……それを止めるべきか、それとも望み通り怪異として斬るべきか。悩んでしまって……結果、ただ怖い思いをさせるだけになってしまいました」<br>
+							「それを止めるべきか、それとも望み通り怪異として斬るべきか。悩んでしまって……結果、ただ怖い思いをさせるだけになってしまいました」<br>
 							「せめてもの贖罪です。誰にも話しませんから、何故あのようなことをしたのか、何故ここに来たのか……何を悩んでいるのか。こっそりと、教えてくれませんか？貴方にはきっと、誰にも聞かれない吐き出し先が必要だと思うのです」
 						</span><br>
 						それを聞き、暫くの沈黙がその場を支配する。五分を超える間、女性が少女を撫でる音だけが部屋に響いていた。<br>
@@ -96,7 +96,7 @@
 						「お母さん、魔法使いだったの。すっごく優しくて、いつも一緒に遊んでくれてた。遅くまでお仕事してて、疲れてるのに、一緒にお風呂入ってくれて」<br>
 						「でも、どこ行ったのかわからないの。警察の人は、お母さん、死んじゃった、かも、頑張って探したけど、って」<br>
 						両手でスカートを握りしめ、大粒の涙を零しながら、少女が泣きじゃくる。そんな様子を、女性は心配そうに、しかしそれを悟られることないよう、頭を撫でて見守っていた。<br>
-						「だから！この家には、来ちゃダメって、お父さんが言ってたから！ここなら、お母さんのところに行けると思って、誰か殺してくれると思って！」<br>
+						「だから！この家には、来ちゃダメって、お父さんが言ってたから！ここなら、お母さんのところに行けると思って、誰かが殺してくれると思って！」<br>
 						「あの本を見たとき思ったの、きっとこの本なら、って！だから！」<br>
 						そう叫んで顔を上げた少女の顔が、何かに塞がれる。目の前に広がる白い布。女性の着る<ruby>白衣<rt>びゃくえ</rt></ruby>が、少女を包み込んでいた。ぎゅう、と優しく両手で少女を抱き締め、優しく撫でながら、女性が語り掛ける。<br>
 						<span class="spanCharacterDialogTie">
@@ -105,7 +105,7 @@
 							「そう思うまでに、お母様が大好きだったのですね。でも、きっと話してしまえば、心配をかけてしまうから」<br>
 							「貴女はきっととても優しいから。抱え込んで、自分一人で思い悩んでしまって……」<br>
 							「……今は、ここには私しかいません。さっき会ったばかりで、赤の他人で、いくら心配をかけても問題のない、私しか」<br>
-							「だから、今は……好きなだけ、泣いちゃっていいですよ」
+							「だから、今は……好きなだけ、泣いちゃっていいんですよ」
 						</span><br>
 						ふわりと香る、甘い、花のような香。それのせいだろうか。少し心の枷が取れた気がして、純粋な感情の濁流が少女の頭を駆け巡る。少女にもう口に出せる言葉はなかった。ただただ、大きな声と大粒の涙を流し、女性に抱き寄せられるままになる。亡くなったはずの母の手を、自分の頭に重ねながら。<br>
 						<br>
@@ -128,23 +128,23 @@
 						<span class="spanCharacterDialogTie">
 							「そうでしたか。なら安心です、ふふ」
 						</span><br>
-						そう言いながら、女性は膝を立て、黒くつやつやと光る手を少女に向ける。その手を取って、少女も一緒に立ち上がる。水のようにつるつるで、油を塗ったように少し滑る、不思議な感触。そんな独特の触感を楽しむ少女を、愛おしそうに女性が見つめる。<br>
+						そう言いながら、女性は膝を立て、黒くつやつやと光る手を少女に向ける。その手を取って、少女も一緒に立ち上がる。水のようにつるつるで、油を塗ったように少し滑る、しかし濡れているわけではなく、握れば決して離れることはなく手に吸い付く、不思議な感触。そんな独特の触感を楽しむ少女を、愛おしそうに女性が見つめる。<br>
 						<span class="spanCharacterDialogTie">
 							「気になりますか？私の手」
 						</span><br>
-						そう聞いてはっと顔を上げ、バツが悪そうに笑う少女を、再び黒く光る手で撫でる。そんな女性の首元は、黒い肌に月光を反射して美しく艶めいていた。<br>
+						そう聞いてはっと顔を上げ、バツが悪そうに笑う少女を、再び黒く光る手で撫でる。そんな女性の首元は、白衣に涙も鼻水も跡形なく、白い服と黒い肌が月光を反射して、美しく艶めいていた。<br>
 						「あ、嫌いとかじゃなくてね！お姉さんの手、つるつるしてて面白い、安心する」<br>
 						<span class="spanCharacterDialogTie">
 							「ふふ！元気になったら、また会いに行きます。その時に存分に触ってください」
 						</span><br>
 						そう言って、女性は机に戻されていた本を袖に仕舞い、反対の手で少女の手を握る。透明に透けた袖の中で、本がずっしりと布を押し伸ばしていた。<br>
 						<span class="spanCharacterDialogTie">
-							「この本は、私達で処分しておきます。先の様子を見て、ここに放置はできませんから」<br>
+							「この本は私達で処分しておきます。先の様子を見ておいて、放置はできませんから」<br>
 							「さ、帰りましょう。きっと貴女のご家族も、大切な貴女を探していますよ」
 						</span><br>
 						「うん！」<br>
 						そう言って、家の近くまで少女を送った女性が、別れ際に少女とした会話。<br>
-						「そういえば、お姉さん、お名前なぁに？私はリカ！」<br>
+						「そういえば、お姉さん、お名前なぁに？私はミズエ！」<br>
 						<span class="spanCharacterDialogTie">
 							「あー……」
 						</span><br>
@@ -155,8 +155,7 @@
 						</span><br>
 						<br>
 						<br>
-						<br>
-						家に着いた少女が父に彼女の名前を伝え、その名前に驚いた父が娘を連れて稚秉に会いに来たのは、また別の話。
+						そして少女が家に着き、泣きながら出迎えた父に彼女の名前を伝え、聞き覚えのある名前に驚いた父が娘を連れて稚秉に会いに来たのは、また別の話。<br>
 						<br>
 						<br>
 						<br>
