立ち絵配布開始&軽微な修正 * うらのす海老様の立ち絵を配布開始 * たぬざか様の立ち絵の名称変更・サンプル追加

--- a/distribute.html
+++ b/distribute.html
@@ -99,7 +99,7 @@
 					</ul>
 					<br>
 					配布場所→<a href="https://drive.google.com/file/d/11e1H7fflM8ZicfXropEG8g1uhe4IvuOo/view?usp=sharing">■</a>　　デモ音声→<a href="./distribute_demo.html#MCI_YatoiroTIE_Seseragi">■</a><br>
-					現在の最新バージョンはv1です。<br>
+					現在の最新バージョンはv1.0です。<br>
 					<br>
 					更新履歴<br>
 					(2025/09/08) v1.0 配布開始<br>
@@ -119,7 +119,7 @@
 					</ul>
 					<br>
 					配布場所→<a href="https://drive.google.com/file/d/1IDXu2WpFsuSG1RYUCdRFSNy_3eH2jG8P/view?usp=sharing">■</a>　　デモ音声→<a href="./distribute_demo.html#UTU_YatoiroTIE_Renzoku">■</a><br>
-					現在の最新バージョンはv2です。<br>
+					現在の最新バージョンはv2.0です。<br>
 					<br>
 					更新履歴<br>
 					(2024/06/20) v1.0 配布開始<br>
@@ -128,8 +128,8 @@
 			</div>
 			<div class="divDistributeContainerIllust" id="IST_YatoiroTIE_SD">
 				<div class="divDistributeContainerItem">
-					<h1><b>谷菟彩稚秉立ち絵(SD)</b></h1><br>
-					<b>谷菟彩稚秉立ち絵(SD)</b>は、たぬざか様に作成いただいた公式監修立ち絵です。<br>
+					<h1><b>谷菟彩稚秉公式SD立ち絵 byたぬざか</b></h1><br>
+					<b>谷菟彩稚秉公式SD立ち絵 byたぬざか</b>は、たぬざか様に作成いただいた公式監修立ち絵です。<br>
 					動画、静止画の作成等にご活用いただけますと嬉しいです。<br>
 					<br>
 					想定用途
@@ -138,11 +138,31 @@
 						※形態を問わず、キャラクター「谷菟彩稚秉」としての利用を想定しています。
 					</ul>
 					<br>
-					配布場所→<a href="https://drive.google.com/file/d/1h_b7KLGVg5P2yCj2QqO75UBN7Yi7MDLs/view?usp=sharing">■</a><br>
-					現在の最新バージョンはv1です。<br>
+					配布場所→<a href="https://drive.google.com/file/d/1GA6f5OrutB2Ndiy0UysHmj5Rh-TQhMTg/view?usp=sharing">■</a><br>
+					現在の最新バージョンはv1.01です。<br>
 					<br>
 					更新履歴<br>
-					(2025/09/08) v1.0 配布開始<br>
+					(2025/09/08) v1.00 配布開始<br>
+					(2025/12/01) v1.01 名称の変更、サンプル画像の追加(内容物に変化なし)<br>
+				</div>
+			</div>
+			<div class="divDistributeContainerIllust" id="IST_YatoiroTIE_SD">
+				<div class="divDistributeContainerItem">
+					<h1><b>谷菟彩稚秉等身立ち絵 byうらのす海老</b></h1><br>
+					<b>谷菟彩稚秉等身立ち絵 byうらのす海老</b>は、うらのす海老様に作成いただいた公式監修立ち絵です。<br>
+					動画、静止画の作成等にご活用いただけますと嬉しいです。<br>
+					<br>
+					想定用途
+					<ul>
+						<li>谷菟彩稚秉の二次創作としての動画、静止画に用いるため、軽微な加工をして素材として用いること。<br>
+						※形態を問わず、キャラクター「谷菟彩稚秉」としての利用を想定しています。
+					</ul>
+					<br>
+					配布場所→<a href="https://drive.google.com/file/d/1763SWVN3EvgpzN8nRSEiYbIeu3u5MtDp/view?usp=sharing">■</a><br>
+					現在の最新バージョンはv1.00です。<br>
+					<br>
+					更新履歴<br>
+					(2025/09/08) v1.00 配布開始<br>
 				</div>
 			</div>
 			<div class="divDistributeContainerIllust" id="LGO_YatoiroTIE_01">
@@ -161,7 +181,7 @@
 					</ul>
 					<br>
 					配布場所→<a href="https://drive.google.com/file/d/17b6T2gqaGX-hOrPbLYv8EnyvilQFFRHY/view?usp=sharing">■</a><br>
-					現在の最新バージョンはv1です。<br>
+					現在の最新バージョンはv1.0です。<br>
 					<br>
 					更新履歴<br>
 					(2025/09/08) v1.0 配布開始<br>
